--- a/app/views/seats/_form.html.erb
+++ b/app/views/seats/_form.html.erb
@@ -29,4 +29,7 @@
   <div class="actions">
     <%= form.submit %>
   </div>
+
+<%= render 'form_seat_classes', seat_class: @seat_class %>
+
 <% end %>
